Fix layout of manage shortcuts link in extension installed bubble.

BUG=611703

Review-Url: https://codereview.chromium.org/1974403003
Cr-Commit-Position: refs/heads/master@{#393728}

Former-commit-id: 133b4c13cac797ad830ea23cd6e1e3904aa79a00